--- a/novo.html
+++ b/novo.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<time>Cursos da Alura</time>
+	<time>Cursos de DevOps da Alura</time>
 </head>
 <body>
 <ul>
 	<li>Vagrant</li>
 	<li>Docker</li>
 	<li>Ansible</li>
-	<li>Integração Contínua</li>
+	<li>Integração Contínua : Maturidade e Produtividade no Desenvolvimento de Software</li>
 </ul>
 </body>
 </html>
