--- a/novo.html
+++ b/novo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<time>Cursos da Alura</time>
+	<time>Lista de Cursos de DevOps da Alura</time>
 </head>
 <body>
 <ul>
