--- a/novo.html
+++ b/novo.html
@@ -8,9 +8,9 @@
 <ul>
 	<li>Vagrant: Gerenciando máquinas virtuais</li>
 	<li>Docker: Criando Containers sem dor de cabeça</li>
-	<li>Ansible</li>
+	<li>Ansible: Sua infraestrutura como código</li>
 	<li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
-	<li>Kubernetes</li>
+	<li>Kubernetes: Orquestração de contêineres prontos para produção</li>
 </ul>
 </body>
 </html>
